changed some of the holoedit part
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5033 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -271,12 +271,12 @@ Current low-level spatial-systems research in Jamoma is focused on the developme
 
  
 \subsection{Holo-Edit}
-Initiated by L. Pottier \cite{PottierDAFX98}, Holo-Edit is part of the GMEM Holophon project and dedicated to multi-sources and multi-speakers spatialization. This standalone application \cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAW for recording, editing, and playback of spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors, including symmetry, proportion, translation, acceleration, local exaggeration and more. Different scene representation windows allow the user to view and modify data focusing on different aspects: \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represent the whole composition in a multi-track block-based view.
+Initiated by L. Pottier \cite{PottierDAFX98}, Holo-Edit is part of the GMEM Holophon project and dedicated to multi-sources and multi-speakers spatialization. This standalone application \cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAW for recording, editing, and playback of spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors, including symmetry, proportion, translation, acceleration, local exaggeration and more. Different scene representation windows allow the user to view and modify data focusing on different aspects: \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represent the whole composition in a multi-track block-based view.\\
 An important feature of Holo-Edit is the ability to represent sound waveforms beside their trajectories. This allows to synchronize sound cues to their associated movements.
-The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods. Even if Holo-Edit is combined with a auditory virtual environment such as \cite{CMJ08-VIMIC}, its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).[TODO: I changed something here, but I don't know what you really mean]
+The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods and auditory virtual environment such as \cite{CMJ08-VIMIC}. %Even if Holo-Edit is combined with a auditory virtual environment such as \cite{CMJ08-VIMIC}, its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).[TODO: I changed something here, but I don't know what you really mean] [ FIXED BY CHARLES : I wanted to point that the movements composed are not made to be strongly linked with the scales of our physical world. But we can absolutly erase this line as it's not fundamental, was just a note ]
 Holo-Edit uses Open Sound Control (OSC) as a communication protocol. It has been successfully used in different media environments as mentioned in section \ref{sec:Media programming environments}  using various spatial renderers, such as VBAP, Ambisonics, or DBAP. 
-In this scenarios, the main challenge is to adapt and format the data stream to fit the specific algorithm syntax (e.g. coordinate system, dimensions, units). 
-Consequently A communication interface has been developed and integrated into Jamoma. It thus adds the features of playing trajectory compositions according to the edited score and to record them from any real-time control inputs available in Jamoma. 
+In this scenarios, the main challenge is to adapt and format the data stream to fit the specific algorithm syntax (e.g. coordinate system, dimensions, units).
+Consequently a communication interface has been developed and integrated into Jamoma as a first step towards SpatDIF compliancy of Holo-Edit. It thus adds the features of playing trajectory compositions with the associated sound cues according to the edited score and to record them from any real-time control inputs available in Jamoma. 
   
 
 
