--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -71,8 +71,9 @@
 \permission
 
 \begin{abstract}
-The availability of better CPU resources in recent years makes it possible to experiment more freely with spatial rendering for seeking new ways of expressions, e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. To guarantee an efficient workflow for such non-standardized approach, structure and flexibility are required. This paper proposes a multi-layer concept to meet these requirements.\\                              	
-\textbf{Keywords:} sound spatialization, interoperability, layered architecture, adaptation, site-specific, Ambisonics      
+The improvements in computer and audio equipment in recent years makes it possible to experiment more freely with resource-demanding sound synthesis techniques, such as sound spatialization. For seeking new ways of expressions, different spatialization application should be easy to combined and accessible from one generic user interface and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
+To guarantee an efficient workflow for such non-standardized approaches structure, flexibility, and interoperability are required. Common spatialization systems are often too self-contained and do not consider these requirements. Therefore we proposes a multi-layer concept to mediate sound spatialization.\\                              	
+\textbf{Keywords:} sound spatialization, interoperability, layered architecture, adaptation, site-specific, Ambisonics , TODO: make better \& stronger keywords   
 %-flexible working environment for spatialization\\
 %-A layered approach towards interoperability in sound spatialization management\\
 %The abstract should be placed at the top left column and should contain
@@ -81,17 +82,15 @@ The availability of better CPU resources in recent years makes it possible to ex
 %KEYWORDS : 
 \end{abstract}
 
-\section{Introduction}\label{sec:introduction}
-
- 
+\section{Introduction}\label{sec:introduction}       
 The goal of each spatialization
 %rendering is it only the rendering system, or control/rendering ?
-system is, simply speaking, to facilitate or even empower the creative use of spatial medium for the sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal amongst composers. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
-For instance, the requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02} %TODO: find a Robert Normandeau reference
+system is, simply speaking, to facilitate or even empower the creative use of spatial medium for the sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal amongst artists. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
+The requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02}%TODO: find a Robert Normandeau reference
 ), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). 
 For instance, an interactive art installation where the real-time quality of a spatial rendering system is of great importance in combination with the possibility to control spatial processes through a multi-touch screen, whereas for a performance of a fixed-media composition features such as multichannel playback and the compensation of non-equidistant loudspeaker in terms of sound pressure and time delays may be paramount. Other requirements may be binaural rendering for headphone listening, multichannel recording, up-and down mixing, or a visual representation of a sound scene.  
 Moreover, even during the creation of one spatial art work, the importance of these requirements change throughout the different stages of the creative processes. % \emph{Experimentation -- Arranging -- Performance -- Documentation}. 
-Several common paradigms for spatial sound synthesis are outlined in section \ref{sec:review}. %The availability of better CPU resources in recent years makes it possible to experiment more freely with these paradigms for seeking new ways of expressions, e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. This paper shows how such complex spatialization scenarios can be conceptualized through a multi-layer structure.    
+%Several common paradigms for spatial sound synthesis are outlined in section \ref{sec:review}. %The availability of better CPU resources in recent years makes it possible to experiment more freely with these paradigms for seeking new ways of expressions, e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. This paper shows how such complex spatialization scenarios can be conceptualized through a multi-layer structure.    
 
 
 
@@ -160,7 +159,8 @@ Several common paradigms for spatial sound synthesis are outlined in section \re
 \subsection{Digital Audio Workstations - DAW} \label{sec:digital audio workstations - DAW} 
 Currently, many composers and sound-artists use DAWs for designing their sound spatialization, primarily in the context of fixed media, tape-music and consumer media production. Users of DAWs have often former experience with live diffusion systems or with panning in a hardware mixing console and their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
 A number of (mainly commercial) DAWs are mature and offer a systematic user interface, good project and sound file management, and extendability through plug-ins and can fulfill the needs of many users in the described context.\\
-However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener and originally designed for the requirements of the film industry, is the most common multichannel format in DAWs and in surround panning plugins. More recent, extensions to 7.1 or 10.2 can be found\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
+However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener and originally designed for the requirements of the film industry, is the most common multichannel format in DAWs and in surround panning plugins. 
+Moreover, the 5.1 setup favors frontal direction and has limited capabilities for localizing virtual sources from the sides and back which may limit its artistic use. More recent, extensions to 7.1 or 10.2 can be found\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
 Non-commercial loudspeaker setups as they are used in art installations or concert hall environments, varying in number and layout of loudspeakers, are usually not expected -- consequently existing DAW-projects are hard to adapt to this situations. 
 %From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. It was not until the late nineties that new suggestions for surround workstations (from 6.1 to 10.2, enhancing sides precision, and perception outside of the Central Listening Position) were considered.\\
 %This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
@@ -184,7 +184,6 @@ In most applications, this factor is restricted and linked to the sound source's
 Beside the paradigm of the DAW, various media programming environments exist, such as SuperCollider, Pure Data, Chuck, OpenMusic, or Max/MSP that are capable for spatial sound synthesis. In order to support individual approaches and to meet the specific needs of computer music and mixed media art, these environments enable the user to combine music making with computer programming.\\  
 However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges in spatial music, as outlined in section \ref{sec:introduction}. Consequently, numerous different self-contained spatialization libraries and toolboxes were created by artists and researcher, such as the Space Unit Generator \cite{SUG02}, IRCAM's Spatialisateur \cite{JotPhD}, and Virtual Microphone Control \cite{CMJ08-VIMIC} to generate virtual sound sources and artificial spaces. Also toolboxes primarily dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
 However, each tool may only provide solutions for a subset of compositional viewpoints and the development of new aesthetics through combining these tools is difficult or even limited through their specific designs. 
-%LIMITATIONS OF THESE SOLUTIONS :
 
 \section{Strategies \& Methodologies in sound spatialization}  
  
@@ -237,30 +236,34 @@ In order to better grasp the structural and methodological entities used in a sp
 %  			\caption{Layers}
 %		\label{tab:layer}       
 %	\end{table*}                          
-
 	\begin{figure}
 		[ht] \centerline{
 		\includegraphics[width=1.1\columnwidth]{layers.pdf}} \caption{TODO: where is Soundflower and Rewire in that graph?} \label{fig:layers} 
 	\end{figure}
-	%\end{center}
-
-
-\subsection{SpatDIF}
-
-A particular effort has been done by the authors on integrating and developping SpatDIF as Layer 4 (audio scene description). The goal of SpatDIF is to develop a system-independent language for describing spatial audio scenes \cite{Peters:2008spatdif} 
+	%\end{center}  
+\subsubsection{Physical Device Layer}
+TODO 
+\subsubsection{Decoded Audio Stream Layer}
+TODO
+\subsubsection{Encoded Audio Stream Layer}	
+TODO
+\subsubsection{DSP / Rendering Layer}
+TODO
+\subsubsection{Audio Scene Description Layer}
+TODO \\
+\textbf{SpatDIF:} A particular effort has been done by the authors on integrating and developing SpatDIF as Layer 4 (audio scene description). The goal of SpatDIF is to develop a system-independent language for describing spatial audio scenes \cite{Peters:2008spatdif} 
 Formats that integrate spatial audio descriptors such as MPEG-4 Advanced Audio BIFS or OpenAL did not fully succeed in the music or fine arts community because these formats are primary tailored to multimedia and gaming applications and do not necessarily consider the special requirements of spatial music and performances in concert venues or sonic/mixed media installations in specific places such as galleries or museums. Furthermore it is the authors' opinion that artists were not sufficiently involved in the development of these formats.\\
 As can be seen in the layer section (... to be continued ...)
 
+\subsubsection{Authoring / Render-Control Layer}	
+TODO   
 
-
-\section{Tools}
+\section{Stratified Tools}
 %- structured according to layers
-
 In order to concretely experiment these ideas, the authors designed and used the tools described below :
-
+TODO: maybe the tools should be organized according to the layers 
 \subsection{ICST Ambisonics}
-The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two DSP externals ambiencode~ and ambidecode~ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm was derived from in-phase ambisonic decoding and also coded as Max/MSP external. Ambipanning~ implements the Ambisonic Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular sepaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST ambisonic DSP objects. \cite{Neukom:2008ambipan}
-
+The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two DSP externals ambiencode~ and ambidecode~ generate and decode Higher Order Ambisonics. They reach 3rd order with Furse-Malham Formulas in version 1.2, and 5th order using either the Furse-Malham or Normalized 3D formulas in version 2.0. The two control externals ambimonitor and ambicontrol complete the set. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the Ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. The import/export format for the trajectories and state snapshots is a simple XML text file, which will be replaced by a SpatDIF compliant formatting in a next release. \cite{Schacher:2006ambi_max} At ICST a different panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonic decoding and also coded as Max/MSP external. Ambipanning~ implements the Ambisonic Equivalent Panning, which transcodes in one step a set of mono sources onto a ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply per point individually varying directivity responses. This external understands the same command syntax and becomes interchangeable with the other ICST ambisonic DSP objects. 
 \subsection{Jamoma}
 
 Jamoma\footnote{\url{http://www.jamoma.org/}} is a collaborative set of software tools.  It includes DSP libraries and a framework for structuring Max/MSP patches.\\
@@ -268,7 +271,7 @@ The DBAP algorithm \cite{dbapICMC09} is included in the Jamoma library as a Max/
 In addition to the libraries, the Jamoma Modular Framework\cite{Place:2006jamoma} supplies a set of spatialization tools as modules wrapping various spatialization algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, and ViMic\cite{CMJ08-VIMIC}) that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
 Moreover, a number of effect processors (Doppler, Airfilter, RollOff, Reverb) and utilities (loudspeaker setup, FIXME:SPL compensation, FIXME:delay compensation, multichannel meters and auxiliaries) are also available in the distribution.
 All these modules have been designed according to a common namespace model, thus allowing the user to seamlessly connect the modules in minutes and then experiment with the ideas presented here.  In particular, the  interoperability of different algorithms such as Holo-Edit, ICST Ambimonitor, and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}) can be quickly mapped to the aforementioned rendering models.\\
-Current low-level spatial-systems research in Jamoma is focused on the development of Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, a coding layer for the creation of dynamic audio graph topographies.  One application of Jamoma Multicore is the creation of "multichannel signals" that can be passed between objects in Max/MSP or Pure Data.  These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously and the audio graph will adapt accordingly.  The signals can be audio in the traditional sense, or carried ambisonics encoded signals of the Nth order.
+Current low-level spatial-systems research in Jamoma is focused on the development of Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, a coding layer for the creation of dynamic audio graph topographies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data.  These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously and the audio graph will adapt accordingly.  The signals can be audio in the traditional sense, or carried ambisonics encoded signals of the Nth order.
 
  
 \subsection{Holo-Edit}
