grammar, spelling, wording, etc. for the abstract
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5036 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -71,8 +71,8 @@
 \permission
 
 \begin{abstract}
-The improvements in computer and audio equipment in recent years makes it possible to experiment more freely with resource-demanding sound synthesis techniques, such as sound spatialization. For seeking new ways of expressions, different spatialization application should be easy to combined and accessible from one generic user interface and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
-To guarantee an efficient workflow for such non-standardized approaches structure, flexibility, and interoperability are required. Common spatialization systems are often too self-contained and do not consider these requirements. Therefore we proposes a multi-layer concept to mediate sound spatialization.\\                              	
+The improvements in computer and audio equipment in recent years makes it possible to experiment more freely with resource-demanding sound synthesis techniques such as spatialization. For seeking new means of expression different spatialization applications should be easily combined and accessible for both programmatic and user interfaces. % and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
+Guaranteeing efficient workflow for non-standardized approaches requires structure, flexibility, and interoperability. Common spatialization systems are too often self-contained giving no consideration to these requirements. Therefore, we propose a multi-layer approach to mediate sound spatialization to meet these demands.\\                              	
 \textbf{Keywords:} sound spatialization, interoperability, layered architecture, adaptation, site-specific, Ambisonics , TODO: make better \& stronger keywords   
 %-flexible working environment for spatialization\\
 %-A layered approach towards interoperability in sound spatialization management\\
