--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -83,13 +83,13 @@ Guaranteeing efficient workflow for non-standardized approaches requires structu
 \end{abstract}
 
 \section{Introduction}\label{sec:introduction}       
-The goal of each spatialization
+The goal of any spatialization
 %rendering is it only the rendering system, or control/rendering ?
-system is, simply speaking, to facilitate or even empower the creative use of spatial medium for the sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal amongst artists. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
+system is to facilitate or empower the creative use of the spatial medium for a sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal amongst artists. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
 The requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02}%TODO: find a Robert Normandeau reference
 ), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). 
-For instance, an interactive art installation where the real-time quality of a spatial rendering system is of great importance in combination with the possibility to control spatial processes through a multi-touch screen, whereas for a performance of a fixed-media composition features such as multichannel playback and the compensation of non-equidistant loudspeaker in terms of sound pressure and time delays may be paramount. Other requirements may be binaural rendering for headphone listening, multichannel recording, up-and down mixing, or a visual representation of a sound scene.  
-Moreover, even during the creation of one spatial art work, the importance of these requirements change throughout the different stages of the creative processes. % \emph{Experimentation -- Arranging -- Performance -- Documentation}. 
+One example is an interactive art installation where the real-time quality of a spatial rendering system is of great importance in combination with the possibility to control spatial processes through a multi-touch screen.  Juxtaposed is a second example: a performance of a fixed-media composition where the paramount features may be multichannel playback and the compensation of non-equidistant loudspeakers (in terms of sound pressure and time delays). Additional scenarios may require binaural rendering for headphone listening, multichannel recording, up and down mixing, or a visual representation of a sound scene.  
+Moreover, even during the creation of one spatial art work, the importance of these requirements may change throughout different stages of the creative processes. % \emph{Experimentation -- Arranging -- Performance -- Documentation}. 
 %Several common paradigms for spatial sound synthesis are outlined in section \ref{sec:review}. %The availability of better CPU resources in recent years makes it possible to experiment more freely with these paradigms for seeking new ways of expressions, e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. This paper shows how such complex spatialization scenarios can be conceptualized through a multi-layer structure.    
 
 
