some proofing of section 2.2 -- ya'llwho've been working on this section should make sure I didn't distort the meaning of anything as I tried to correct grammatical and construction issues.
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5038 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -157,15 +157,15 @@ Moreover, even during the creation of one spatial art work, the importance of th
 \subsection{Live sound diffusion}  
 ?? shall we mention live diffusion as a paradigm ?
 \subsection{Digital Audio Workstations - DAW} \label{sec:digital audio workstations - DAW} 
-Currently, many composers and sound-artists use DAWs for designing their sound spatialization, primarily in the context of fixed media, tape-music and consumer media production. Users of DAWs have often former experience with live diffusion systems or with panning in a hardware mixing console and their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
-A number of (mainly commercial) DAWs are mature and offer a systematic user interface, good project and sound file management, and extendability through plug-ins and can fulfill the needs of many users in the described context.\\
+Currently, many composers and sound-artists use DAWs for designing their sound spatialization primarily in the context of fixed media, tape-music, and consumer media production. Users of DAWs often have former experience with live diffusion systems, or with panning in a hardware mixing console. Their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
+A number of (mainly commercial) DAWs are mature and offer a systematic user interface, good project and sound file management, and extendability through plug-ins.  They can fulfill the needs of many users in the described context.\\
 However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener and originally designed for the requirements of the film industry, is the most common multichannel format in DAWs and in surround panning plugins. 
-Moreover, the 5.1 setup favors frontal direction and has limited capabilities for localizing virtual sources from the sides and back which may limit its artistic use. More recent, extensions to 7.1 or 10.2 can be found\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
-Non-commercial loudspeaker setups as they are used in art installations or concert hall environments, varying in number and layout of loudspeakers, are usually not expected -- consequently existing DAW-projects are hard to adapt to this situations. 
+Moreover, the 5.1 setup favors frontal direction and has limited capabilities for localizing virtual sources from the sides and back, which may limit its artistic use.  More recently, extensions to 7.1 or 10.2 are available\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
+Non-commercial loudspeaker setups are used in art installations or concert hall environments varying in number and layout.  These configurations are not typically anticipated by existing DAW software. Consequently, existing DAW-projects are difficult to adapt to these situations. 
 %From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. It was not until the late nineties that new suggestions for surround workstations (from 6.1 to 10.2, enhancing sides precision, and perception outside of the Central Listening Position) were considered.\\
 %This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
-\\Another critical function for surround sound mixing is how the energy of a sound is mixed between the loudspeakers. A \emph{blur} parameter, which determines the apparent source width of a panned signal should be a standard control element of every surround panner, because it enables many variations and possibilities for a creative mix. %and because we would work with this parameter considering the specific features of the sound we have to spatialize. 
-In most applications, this factor is restricted and linked to the sound source's position to the center in the surround panner, and is related to parameters such as \emph{spread} or \emph{diversity} (e.g. in Apple Logic Pro \footnote{\url{www.apple.com/logicstudio/}}). To the authors opinion, the most flexible control element can be found in Sequoia \footnote{\url{http://www.magix.com/us/sequoia/}}, with \emph{soundfield} offset and character (shape) settings for each track, a \emph{global divergence} to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. 
+\\Another critical function for surround sound mixing is the means by which a sound source's energy is distributed amongst the loudspeakers. A \emph{blur} parameter, which determines the apparent source width of a panned signal, should be a standard control element of every surround panner because it enables many variations and possibilities for a creative mix. %and because we would work with this parameter considering the specific features of the sound we have to spatialize. 
+In most applications, this factor is restricted and linked to the sound source's position relative to the center in the surround panner, and is related to parameters such as \emph{spread} or \emph{diversity} (e.g. in Apple Logic Pro \footnote{\url{www.apple.com/logicstudio/}}). To the authors' opinion, the most flexible control element can be found in Sequoia \footnote{\url{http://www.magix.com/us/sequoia/}}, with \emph{soundfield} offset and character (shape) settings for each track, a \emph{global divergence} to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. 
 %
 %
 % Did we discuss all point below:? (moved above -> we should use them at the beginning IMHO)
