--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -181,9 +181,9 @@ In most applications, this factor is restricted and linked to the sound source's
 % 
       
 \subsection{Media programming environments}  \label{sec:Media programming environments}
-Beside the paradigm of the DAW, various media programming environments exist, such as SuperCollider, Pure Data, Chuck, OpenMusic, or Max/MSP that are capable for spatial sound synthesis. In order to support individual approaches and to meet the specific needs of computer music and mixed media art, these environments enable the user to combine music making with computer programming.\\  
-However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges in spatial music, as outlined in section \ref{sec:introduction}. Consequently, numerous different self-contained spatialization libraries and toolboxes were created by artists and researcher, such as the Space Unit Generator \cite{SUG02}, IRCAM's Spatialisateur \cite{JotPhD}, and Virtual Microphone Control \cite{CMJ08-VIMIC} to generate virtual sound sources and artificial spaces. Also toolboxes primarily dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
-However, each tool may only provide solutions for a subset of compositional viewpoints and the development of new aesthetics through combining these tools is difficult or even limited through their specific designs. 
+Beside the paradigm of the DAW, various media programming environments exist that are capable of spatial sound synthesis. These include SuperCollider, Pure Data, Chuck, OpenMusic, and Max/MSP.  In order to support individual approaches and to meet the specific needs of computer music and mixed media art, these environments enable the user to combine music making with computer programming.\\  
+However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges of spatial music as outlined in section \ref{sec:introduction}. Consequently, numerous self-contained spatialization libraries and toolboxes have been created by artists and researchers to generate virtual sound sources and artificial spaces.  These include the Space Unit Generator \cite{SUG02}, IRCAM's Spatialisateur \cite{JotPhD}, and Virtual Microphone Control \cite{CMJ08-VIMIC}. Also toolboxes primarily dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
+Each tool, however, may only provide solutions for a subset of compositional viewpoints.  The development of new aesthetics through combining these tools is difficult or limited through their specific designs. 
 
 \section{Strategies \& Methodologies in sound spatialization}  
  
