Section 3: - I added a TODO for someone about the end of the first paragraph. - I worked on the following paragraphs.  They are still not very satisfying, but I'm getting tired.  Is everyone else happy with the structure of this section?
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5040 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -187,12 +187,12 @@ Each tool, however, may only provide solutions for a subset of compositional vie
 
 \section{Strategies \& Methodologies in sound spatialization}  
  
-A traditional workflow in electroacoustic composition or linear sound editing comprises a number of steps leading to the construction of the audio scene. Other contexts such as audio installations or interactive/multimedia work imply a different sequence in the steps of the process. The modular approach tries to abstract these differences and define underlying common elements that are always in play when spatialization is used. This layer model doesn't imply a specific method, it much rather tries to emphasize the importance of the interchangeability of modules, which share their interconnecting interfaces. The tools for each layer can be exchanged and compared, without forcing the artist to completely rebuild their setup.
+A traditional workflow in electroacoustic composition or linear sound editing comprises a number of steps leading to the construction of an audio scene. Other contexts, such as audio installations or interactive/multimedia work, imply a different sequence in the steps of the process. A layered modular approach tries to abstract these differences and define underlying common elements that are always in play when spatialization is used. This layered model doesn't imply a specific method.  It much rather emphasizes the importance of the interchangeability of modules, which share their interconnecting interfaces and communication protocol.  Thus, the tools for each layer can be exchanged and compared without forcing an artist to completely rebuild their setup.  TODO:  I (Tim) am not sure what word to use at the end of the preceding sentence, but you cannot use 'setup'.  Using 'setup' as a noun is not really correct English; when it is used it is considered extremely informal.
 
-\begin{quote}Spatial orchestration eases this [...] constraint, [...] the composition may be reconfigured for each individual performance. This will require [...] the composer [to] conceive spatial attributes in a more abstract fashion, that is then instantiated in potentially different ways into different performance environments. \cite{Lyon:2008spatial_orchestration} \end{quote}
-By working symbolically during the composition/editing process and separating the authoring from the rendering processes a realization can become portable. A common set of descriptors and shared representation metaphors such as timelines or scene graphs builds the glue to make a disparate set of tools into a coherent workflow by enhancing interoperability between the different building blocks.\\
-Modularity is another essential tenet.  Modularity allows the separation of elements into different layers according to their function as described in \ref{sec:layers}.  Furthermore, Modularity provides a means by which   modules may query additional modules and then adapt themselves to other parts of the graph.\\
-The Tools used for authoring or rendering must comply to these recommendations, and can be separated in two categories : rendering engines and authoring meta-tools.\\
+\begin{quote}Spatial orchestration eases this [...] constraint, [...] the composition may be reconfigured for each individual performance. This will require [...] the composer [to] conceive spatial attributes in a more abstract fashion that is then instantiated in potentially different ways into different performance environments. \cite{Lyon:2008spatial_orchestration} \end{quote}
+By working symbolically during the composition/editing process, and separating the authoring from the rendering processes, a realization can become portable. A common set of descriptors and shared representation metaphors, such as timelines or scene graphs, builds the glue to make a disparate set of tools into a coherent workflow by enhancing interoperability between the building blocks.\\
+Thus modularity is an essential tenet.  Modularity allows the separation of elements into different layers according to their function as described in \ref{sec:layers}.  Furthermore, Modularity provides a means by which modules may query additional modules and then adapt themselves to the system's topography.\\
+The Tools used for authoring and rendering must comply to these recommendations and can be separated into two categories: rendering engines and authoring meta-tools.\\
 
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
