breaking up run-on sentences in the SpatDIF overview.
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5041 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -197,7 +197,7 @@ The Tools used for authoring and rendering must comply to these recommendations 
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
 %TROND, J45CH\\
-In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{fig:layers}). This model gets its inspiration from the OSI network model \footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}. OSI (Open Systems Interconnection), is an abstract description for layered communications and computer network protocol design, which divides network architecture into seven layers which range, from top to bottom, between the Application and the Physical Layers
+In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{fig:layers}). This model gets its inspiration from the OSI network model \footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}. OSI (Open Systems Interconnection) is an abstract description for layered communications and computer network protocol design.  OSI divides network architecture into seven layers which range, from top to bottom, between the Application and  Physical Layers.
 %
 %
 %\begin{packed_enumerate}   
@@ -252,7 +252,7 @@ TODO
 \subsubsection{Audio Scene Description Layer}
 TODO \\
 \textbf{SpatDIF:} A particular effort has been done by the authors on integrating and developing SpatDIF as Layer 4 (audio scene description). The goal of SpatDIF is to develop a system-independent language for describing spatial audio scenes \cite{Peters:2008spatdif} 
-Formats that integrate spatial audio descriptors such as MPEG-4 Advanced Audio BIFS or OpenAL did not fully succeed in the music or fine arts community because these formats are primary tailored to multimedia and gaming applications and do not necessarily consider the special requirements of spatial music and performances in concert venues or sonic/mixed media installations in specific places such as galleries or museums. Furthermore it is the authors' opinion that artists were not sufficiently involved in the development of these formats.\\
+Formats that integrate spatial audio descriptors such as MPEG-4 Advanced Audio BIFS or OpenAL did not fully succeed in the music or fine arts community because these formats are primary tailored to multimedia and gaming applications.  As such they do not necessarily consider the special requirements of spatial music, or performances in concert venues, or sonic/mixed media installations in specific places such as galleries or museums.  Furthermore it is the authors' opinion that artists were not sufficiently involved in the development of these formats.\\
 As can be seen in the layer section (... to be continued ...)
 
 \subsubsection{Authoring / Render-Control Layer}	
