--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -267,20 +267,21 @@ The ICST ambisonics tools comprise a set of four externals for Max/MSP. The two 
 \subsection{Jamoma}
 
 Jamoma\footnote{\url{http://www.jamoma.org/}} is a collaborative set of software tools.  It includes DSP libraries and a framework for structuring Max/MSP patches.\\
-The DBAP algorithm \cite{dbapICMC09} is included in the Jamoma library as a Max/MSP external. DBAP focuses on applications that extend beyond traditional loudspeaker arrangements.  Limitations explained in \ref{sec:digital audio workstations - DAW}, based on an ideal model rather than actual positions of loudspeakers in the room, can thus be overcome.  DBAP has proven to be particularly useful in theatre and installation applications.\\
-In addition to the libraries, the Jamoma Modular Framework\cite{Place:2006jamoma} supplies a set of spatialization tools as modules wrapping various spatialization algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, and ViMic\cite{CMJ08-VIMIC}) that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
-Moreover, a number of effect processors (Doppler, Airfilter, RollOff, Reverb) and utilities (loudspeaker setup, FIXME:SPL compensation, FIXME:delay compensation, multichannel meters and auxiliaries) are also available in the distribution.
-All these modules have been designed according to a common namespace model, thus allowing the user to seamlessly connect the modules in minutes and then experiment with the ideas presented here.  In particular, the  interoperability of different algorithms such as Holo-Edit, ICST Ambimonitor, and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}) can be quickly mapped to the aforementioned rendering models.\\
-Current low-level spatial-systems research in Jamoma is focused on the development of Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, a coding layer for the creation of dynamic audio graph topographies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data.  These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously and the audio graph will adapt accordingly.  The signals can be audio in the traditional sense, or carried ambisonics encoded signals of the Nth order.
+The DBAP spatialization algorithm \cite{dbapICMC09} is included in the Jamoma library as a Max/MSP external. DBAP focuses on applications that extend beyond traditional loudspeaker arrangements.  Limitations explained in \ref{sec:digital audio workstations - DAW} that are based on an ideal model rather than actual positions of loudspeakers in the room can thus be overcome.  DBAP has proven to be particularly useful in theatre and installation applications.\\
+In addition to the libraries, the Jamoma Modular Framework\cite{Place:2006jamoma} supplies a set of spatialization tools as modules wrapping various algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, and ViMic\cite{CMJ08-VIMIC}) that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
+Moreover, a number of effects processors (Doppler, Airfilter, RollOff, Reverb) and utilities (loudspeaker setup, FIXME:SPL compensation, FIXME:delay compensation, multichannel meters and auxiliaries) are also available in the distribution.
+All these modules have been designed according to a common namespace model, thus allowing the user to seamlessly connect the modules in minutes and then experiment with the ideas presented here.  In particular, the interoperability of different algorithms such as Holo-Edit, ICST Ambimonitor, and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}) can be quickly mapped to the aforementioned rendering models.\\
+Current low-level spatial-systems research in Jamoma is focused on the development of Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, a coding layer for the creation of dynamic audio graph topologies.  One application of Jamoma Multicore is the creation of ``multichannel signals" that can be passed between objects in Max/MSP or Pure Data.  These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously and the audio graph will adapt accordingly.  The signals can transport audio samples in the traditional sense, or carry ambisonics encoded signals of the Nth order.
 
  
 \subsection{Holo-Edit}
-Initiated by L. Pottier \cite{PottierDAFX98}, Holo-Edit is part of the GMEM Holophon project and dedicated to multi-sources and multi-speakers spatialization. This standalone application \cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAW for recording, editing, and playback of spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors, including symmetry, proportion, translation, acceleration, local exaggeration and more. Different scene representation windows allow the user to view and modify data focusing on different aspects: \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represent the whole composition in a multi-track block-based view.\\
-An important feature of Holo-Edit is the ability to represent sound waveforms beside their trajectories. This allows to synchronize sound cues to their associated movements.
+Initiated by L. Pottier \cite{PottierDAFX98}, Holo-Edit is part of the GMEM Holophon project and dedicated to multi-source and multi-speaker spatialization. This standalone application \cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAWs for recording, editing, and playback of spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors including symmetry, proportion, translation, acceleration, and local exaggeration. Different scene representation windows allow the user to view and modify data focusing on different aspects: \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represents the whole composition in a multi-track block-based view.\\
+An important feature of Holo-Edit is the ability to represent sound waveforms beside % FIXME: Tim notes that this is not the correct use of the word beside, and I'm not really sure what you mean...
+their trajectories. This allows the synchronization of sound cues to their associated movements.
 The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods and auditory virtual environment such as \cite{CMJ08-VIMIC}. %Even if Holo-Edit is combined with a auditory virtual environment such as \cite{CMJ08-VIMIC}, its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).[TODO: I changed something here, but I don't know what you really mean] [ FIXED BY CHARLES : I wanted to point that the movements composed are not made to be strongly linked with the scales of our physical world. But we can absolutly erase this line as it's not fundamental, was just a note ]
-Holo-Edit uses Open Sound Control (OSC) as a communication protocol. It has been successfully used in different media environments as mentioned in section \ref{sec:Media programming environments}  using various spatial renderers, such as VBAP, Ambisonics, or DBAP. 
-In this scenarios, the main challenge is to adapt and format the data stream to fit the specific algorithm syntax (e.g. coordinate system, dimensions, units).
-Consequently a communication interface has been developed and integrated into Jamoma as a first step towards SpatDIF compliancy of Holo-Edit. It thus adds the features of playing trajectory compositions with the associated sound cues according to the edited score and to record them from any real-time control inputs available in Jamoma. 
+Holo-Edit uses Open Sound Control (OSC) as a communication protocol. It has been successfully used in varied media environments as mentioned in section \ref{sec:Media programming environments} using assorted spatial renderers, such as VBAP, Ambisonics, or DBAP. 
+In these scenarios the main challenge is to adapt and format the data stream to fit the specific algorithm syntax (e.g. coordinate system, dimensions, units).
+Consequently a communication interface has been developed and integrated into Jamoma as a first step towards SpatDIF compliancy of Holo-Edit. It thus adds to the features of trajectory composition playback with the associated sound cues according to the edited score, by making provisions to record them from any real-time control inputs available in Jamoma. 
   
 
 
