--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-04-17 13:45:53 -0400 
+%% Created for Nils Peters at 2009-04-18 13:54:54 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{wright1997osc,
+	Author = {Wright, M. and Freed, A.},
+	Date-Added = {2009-04-18 13:51:13 -0400},
+	Date-Modified = {2009-04-18 13:51:13 -0400},
+	Journal = {Proceedings of the 1997 International Computer Music Conference},
+	Pages = {101-104},
+	Title = {{Open Sound Control: A New Protocol for Communicating with Sound Synthesizers}},
+	Year = {1997}}
 
 @inproceedings{geier2008ssr,
 	Address = {Amsterdam, The Netherlands},
